# orbitprofiler

./: CMakeLists.txt
ElfUtils/: ElfFile.cpp  ElfFileTest.cpp
ItemModels/: CMakeLists.txt  FunctionItemModel.cpp
ItemModels/include/ItemModels/: FunctionItemModel.h
OrbitClientData/: ModuleData.cpp  ModuleDataTest.cpp  ModuleManagerTest.cpp
OrbitClientGgp/: ClientGgp.cpp
OrbitClientModel/: CaptureDeserializer.cpp  CaptureDeserializerTest.cpp  CaptureSerializer.cpp  CaptureSerializerTest.cpp
OrbitClientProtos/: capture_data.proto
OrbitClientServices/: ProcessManager.cpp
OrbitCore/: Capture.cpp  Capture.h  ConnectionManager.cpp  OrbitProcess.h  ProcessUtils.cpp  ProcessUtils.h  SymbolHelperTest.cpp
OrbitFramePointerValidator/: FramePointerValidatorTest.cpp
OrbitGgp/: Client.cpp  InstanceItemModel.cpp
OrbitGl/: App.cpp  App.h  CaptureDeserializerLoadFuzzer.cpp  CaptureWindow.cpp  DataManager.cpp  DataManager.h  DataManagerUpdateModuleInfosFuzzer.cpp  FunctionsDataView.h  ModulesDataView.cpp  ProcessesDataView.cpp  ProcessesDataView.h  TimeGraph.cpp  UnitTestMockEnvironment.cpp
OrbitGrpcProtos/: module.proto  symbol.proto
OrbitQt/: CMakeLists.txt  ConnectToStadiaWidget.cpp  ConnectToStadiaWidget.h  ConnectToStadiaWidget.ui  ConnectionArtifacts.h  ConnectionConfiguration.h  Connections.h  Error.h  OverlayWidget.h  ProcessItemModel.cpp  ProcessItemModel.h  ProcessItemModelTest.cpp  (+11 more)
Widgets/: CMakeLists.txt  CustomSortFilterProxyModel.cpp  FilterBarTableViewWidget.cpp
Widgets/include/Widgets/: CustomSortFilterProxyModel.h  FilterBarTableViewWidget.h
(+20 files in other folders)
